# siteforge

./: .gitignore  AGENTS.md  BoQ_v4.01 template OneCo v4.xlsm  CLAUDE.MD  Flow_RadioPlanGrid-data-2025-11-17 11_19_57.xlsx  HIGHLIGHTS.md  MOR07876 Nørvevika 78 Effektkalkulator Kjerag.xlsx  SKILLS.md  Template TSSR_v6 19.03.2025 OneCo v1.docx
backend/: TSSR_Template_Filled.docx  TSSR_Template_Modern.docx  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_tssr_first_page_fields.py  b2c3d4e5f6g7_add_revision_history.py  c37d40824f3a_initial_schema.py  c3d4e5f6g7h8_add_planned_works.py  d4e5f6g7h8i9_add_project_photos.py  e5f6g7h8i9j0_add_onedrive_fields.py  f6g7h8i9j0k1_add_onedrive_item_id_to_photos.py  g7h8i9j0k1l2_add_export_history.py  h8i9j0k1l2m3_add_build_tasks.py  i9j0k1l2m3n4_add_boq_actuals.py  j0k1l2m3n4o5_add_photo_phase.py  k1l2m3n4o5p6_add_deviations_free_text.py  l2m3n4o5p6q7_add_as_built_versions.py
backend/app/: config.py  database.py  main.py  tssr_template_generator.py  tssr_template_map.py
backend/app/models/: __init__.py  base.py  boq.py  catalog.py  photo.py  project.py  rules.py  tssr.py
backend/app/routers/: boq.py  catalog.py  health.py  photos.py  projects.py  tssr.py
backend/app/schemas/: boq.py  catalog.py  common.py  photo.py  project.py  tssr.py
backend/app/services/: boq_service.py  catalog_service.py  config_utils.py  dependency_engine.py  validation_service.py
backend/scripts/: import_catalog.py
frontend/: index.html  package-lock.json  package.json
(+56 files in other folders)
